# conprotos

./: .gitignore  pyproject.toml  test.py
conprotos/: conprotos.py  utils.py
conprotos/msgs/: telemetry_pb2.py
msgs/: telemetry.proto
tests/: test_conprotos.py
